[package]
name = "bruh"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.2"
windows = { version = "0.58.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Direct3D12", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common"] }

renderer_pool_handle_derive = { path = "renderer_pool_handle_derive" }
bevy_ecs = "0.14.2"
